changed body background color in attempt to correct contrast errors

--- a/web115/styles/styles.css
+++ b/web115/styles/styles.css
@@ -3,7 +3,7 @@
 body {
     font-family: "Roboto", sans-serif;
     color: #80320ebd; 
-    background-color: #9B9B9B; 
+    background-color: #b1b1b1; 
     margin: 0; 
     padding: 0; 
     position:relative;
